# zxultra

./: .clang-format  .gitmodules  BaseWindow.h  CMakeLists.txt  NOTICE  README.md  main.cpp  zxultra.cpp  zxultra.h
shaders/: CMakeLists.txt  PositionColor.hlsl
zxultra/: AppWindow.cpp  AppWindow.h  Blob.cpp  Blob.h  CMakeLists.txt  CommandList.cpp  CommandList.h  ConstantBuffer.h  Constants.h  CreateFunctions.h  DXWindow.cpp  DXWindow.h  DefaultBufferCreator.cpp  DefaultBufferCreator.h  DescriptorHandleSizes.h  DescriptorHeap.cpp  DescriptorHeap.h  Error.h  Fence.cpp  Fence.h  Formats.h  Frame.cpp  Frame.h  FrameData.cpp  FrameData.h  GraphicsQueue.cpp  GraphicsQueue.h  Swapchain.cpp  Swapchain.h  UploadBuffers.cpp  UploadBuffers.h  Util.h  VertexWithColor.h  stdafx.h
zxultra/core/: CMakeLists.txt  Timer.cpp  Timer.h  Util.h  VertexBuffer.h
